--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "classnames": "^2.1.1",
+    "codemirror": "^5.3.0",
     "react": "^0.13.3"
   },
   "devDependencies": {
