Fixing publish:site script

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "build": "gulp clean && NODE_ENV=production gulp build",
     "examples": "gulp dev:server",
-    "publish:site": "gulp publish:site",
+    "publish:site": "gulp publish:examples",
     "release": "gulp release",
     "start": "gulp dev",
     "test": "echo \"no tests yet\" && exit 0",
