--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "codemirror": "^5.3.0",
-    "react": "^0.13.3"
+    "codemirror": "^5.3.0"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
     "happiness": "^1.0.5",
     "react-component-gulp-tasks": "^0.7.0"
+  },
+  "peerDependencies": {
+    "react": "^0.13 - ^0.14.0-beta"
   },
   "browserify-shim": {
     "react": "global:React"
