--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "happiness": "^1.0.5",
+    "react": ">=0.13.0 || ^0.14.0-beta",
     "react-component-gulp-tasks": "^0.7.0"
   },
   "peerDependencies": {
-    "react": "^0.13 - ^0.14.0-beta"
+    "react": ">=0.13.0 || ^0.14.0-beta"
   },
   "browserify-shim": {
     "react": "global:React"
