--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "url": "https://github.com/JedWatson/react-codemirror/issues"
   },
   "dependencies": {
-    "classnames": "^2.1.2",
-    "codemirror": "^5.3.0"
+    "classnames": "^2.1.3",
+    "codemirror": "^5.6.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "happiness": "^1.0.5",
-    "react": ">=0.13.0 || ^0.14.0-beta",
+    "gulp": "^3.9.0",
+    "happiness": "^1.0.7",
+    "react": "^0.13.3",
     "react-component-gulp-tasks": "^0.7.0"
   },
   "peerDependencies": {
-    "react": ">=0.13.0 || ^0.14.0-beta"
+    "react": "^0.13.3"
   },
   "browserify-shim": {
     "react": "global:React"
