Adding bump tasks

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "scripts": {
     "build": "gulp clean && NODE_ENV=production gulp build",
+    "bump": "gulp bump",
+    "bump:minor": "gulp bump:minor",
+    "bump:major": "gulp bump:major",
     "examples": "gulp dev:server",
     "publish:site": "gulp publish:examples",
     "release": "gulp release",
