Adding react-dom for examples

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.0",
     "happiness": "^1.0.7",
     "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-component-gulp-tasks": "^0.7.7"
   },
   "peerDependencies": {
