Remove _currentCodemirrorValue state from CodeMirror component and debounce componentWillReceiveProps function

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
-    "codemirror": "^5.10.0"
+    "codemirror": "^5.10.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
