Dev-depend on browserify-optional
I was getting error `Browserify Error { [Error: Cannot find module 'browserify-optional' from '[redacted]/react-codemirror/node_modules/react-dom-polyfill']`

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
+    "browserify-optional": "^1.0.0",
     "gulp": "^3.9.1",
     "happiness": "^7.1.2",
     "react": "^15.3.1",
