--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "happiness": "^7.1.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-component-gulp-tasks": "^0.7.7",
-    "react-dom-polyfill": "^1.0.0-beta.2"
+    "react-component-gulp-tasks": "^0.7.7"
   },
   "peerDependencies": {
-    "react": ">=0.12 <16"
+    "react": ">=0.14 <16",
+    "react-dom": ">=0.14 <16"
   },
   "browserify-shim": {
     "react": "global:React"
