Fixed React 15.5 deprecation warnings 1) Replaced React.PropTypes with prop-types module. 2) Replaced React.createClass with create-react-class module.

--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "codemirror": "^5.18.2",
-    "lodash.debounce": "^4.0.8"
+    "create-react-class": "^15.5.1",
+    "lodash.debounce": "^4.0.8",
+    "prop-types": "^15.5.4"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "happiness": "^7.1.2",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
     "react-component-gulp-tasks": "^0.7.7"
   },
   "peerDependencies": {
-    "react": ">=0.14 <16",
-    "react-dom": ">=0.14 <16"
+    "react": ">=15.5 <16",
+    "react-dom": ">=15.5 <16"
   },
   "browserify-shim": {
     "react": "global:React"
