--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "happiness": "^7.1.2",
-    "react": "^15.5.3",
+    "react": "16.5.0",
     "react-component-gulp-tasks": "^0.7.7",
-    "react-dom": "^15.5.3"
+    "react-dom": "16.5.0"
   },
   "peerDependencies": {
     "react": ">=15.5 || ^16",
